# TimePass

./: .dockerignore  .gitignore  BRAND_STRATEGY.md  COMPONENT_CATALOG.md  DEPLOYMENT.md  DESIGN.md  DESIGN_RESEARCH.md  PRODUCT_SPEC.md  PROGRESS.md  README.md  VOICE.md  design-qa.md  render.yaml
.playwright-mcp/: page-2026-07-08T14-11-03-484Z.yml  page-2026-07-08T14-11-36-291Z.yml  page-2026-07-08T14-18-33-966Z.yml  page-2026-07-08T14-18-45-531Z.yml  page-2026-07-08T14-19-01-676Z.yml  page-2026-07-08T14-19-30-185Z.yml
app/: README.md  pubspec.yaml  wrangler.jsonc
app/android/: gradle.properties  key.properties.example
app/lib/: main.dart
app/test/: shell_input_state_test.dart  shell_responsive_test.dart  surface_contract_test.dart
catalog/: catalog.yaml
field-notes/: 2026-07-09-haircut-shop-photosynthesis.md  README.md
scripts/: deploy_web.sh
server/: .dockerignore  Dockerfile  pyproject.toml
server/evals/: queries.yaml  results.jsonl  run_evals.py
server/src/nakul_server/: a2ui.py  auth.py  main.py  templates.py  validator.py  visuals.py
server/src/nakul_server/adapters/: aqi.py  panchang.py
server/src/nakul_server/llm/: __init__.py
server/src/timepass_server/: a2ui.py  llm.py  main.py  router.py  templates.py  validator.py  voice.py
server/src/timepass_server/adapters/: aqi.py  cricket.py  weather.py
server/src/timepass_server/llm/: __init__.py  base.py  gemini.py
server/tests/: test_auth.py  test_cors.py  test_gemini_fallback.py  test_generic_stream.py  test_pipeline.py  test_visuals.py  test_voice.py
supabase/: config.toml
(+38 files in other folders)
