[project]
name = "nakul-server"
version = "0.1.0"
description = "Nakul orchestrator: intent router, category adapters, A2UI stream"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jsonschema>=4.23",
    "google-genai>=1.0",
    "httpx>=0.27",
    "python-multipart>=0.0.32",
]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nakul_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
